--- a/src/global/Styles/_boilerplate.scss
+++ b/src/global/Styles/_boilerplate.scss
@@ -29,7 +29,7 @@ body {
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #ff4d30 #ffffff;
+  scrollbar-color: #38BDF2 #ffffff;
 }
 
 /* Chrome, Edge and Safari */
