--- a/src/components/SıgnUp/SıgnUp.css
+++ b/src/components/SıgnUp/SıgnUp.css
@@ -1,6 +1,13 @@
-.card-signup{
-    padding: 50px;
-    opacity: 0.8;
-    box-shadow: 0 2px 8px 2px rgba(20,3,28,15);
 
-}
+.button{
+    background-color: #2ca8ff;
+    border-radius: 20px;
+    transition: background-color 0.3s;
+    color: white;
+    font-size: 13px;
+    margin-left: 45px;
+    margin-right: 5px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    
+  }
