--- a/src/components/Footer/Styles/_footer.scss
+++ b/src/components/Footer/Styles/_footer.scss
@@ -37,7 +37,7 @@ footer {
         transition: all 0.2s;
 
         &:hover {
-          color: $text-orange;
+          color: #38BDF2;
         }
       }
 
@@ -80,7 +80,7 @@ footer {
       transition: all 0.2s;
 
       &:hover {
-        color: $text-orange;
+        color: #38BDF2;
       }
     }
 
@@ -123,7 +123,7 @@ footer {
   background-color: #38BDF2;
   padding: 1.5rem 2.5rem;
   border-radius: 0.3rem;
-  box-shadow: 0 10px 15px 0 rgb(255 83 48 / 25%);
+  box-shadow: 0 10px 15px 0 rgba(0, 221, 246, 0.25);
   transition: all 0.3s;
   border: 2px solid #38BDF2;
   font-size: 1.6rem;
@@ -132,7 +132,7 @@ footer {
   width: 100%;
 
   &:hover {
-    box-shadow: 0 10px 15px 0 rgb(255 83 48 / 40%);
+    box-shadow: 0 10px 15px 0 rgba(4, 192, 255, 0.4);
     background-color: #38BDF2;
   }
 }
