--- a/src/components/Hero/Styles/_hero.scss
+++ b/src/components/Hero/Styles/_hero.scss
@@ -1,11 +1,37 @@
 @use "/src/global/Styles/" as *;
 
+/* .clear-filter[filter-color="blue"] {
+  background: rgba(44, 44, 44, 0.2);
+  background: -webkit-linear-gradient(
+    30deg,
+    rgba(44, 44, 44, 0.2),
+    rgba(3, 161, 224, 0.6)
+  );
+  background: -o-linear-gradient(
+    30deg,
+    rgba(44, 44, 44, 0.2),
+    rgba(3, 161, 224, 0.6)
+  );
+  background: -moz-linear-gradient(
+    30deg,
+    rgba(44, 44, 44, 0.2),
+    rgba(3, 161, 224, 0.6)
+  );
+  background: linear-gradient(
+    0deg,
+    rgba(44, 44, 44, 0.2),
+    rgba(3, 161, 224, 0.6)
+  );
+} */
+
 .hero-section {
   width: 100%;
   height: 97vh;
-  background-color: $bg-gray;
+  //background-color: #373f43;
+  //background-image: url("/public/images/car/car4.jpeg");
   position: relative;
 }
+
 
 .bg-shape {
   position: absolute;
@@ -65,8 +91,9 @@
       font-size: $p-size;
       font-family: $text-font;
       line-height: 1.6;
-      color: $text-gray;
       margin-bottom: 4rem;
+      color: #050505;
+
     }
 
     &__btns {
@@ -89,7 +116,7 @@
         background-color: #38BDF2;
         padding: 1.8rem 3rem;
         border-radius: 0.3rem;
-        box-shadow: 0 10px 15px 0 rgb(255 83 48 / 35%);
+        box-shadow: 0 10px 15px 0 rgba(9, 135, 246, 0.35);
         transition: all 0.3s;
         border: 2px solid #38BDF2;
 
@@ -98,8 +125,9 @@
         }
 
         &:hover {
-          box-shadow: 0 10px 15px 0 rgb(255 83 48 / 60%);
+          box-shadow: 0 10px 15px 0 rgba(0, 157, 255, 0.6);
           background-color: #38BDF2;
+          color: #000;
         }
       }
 
