--- a/src/components/Banner/Styles/_Banner.scss
+++ b/src/components/Banner/Styles/_Banner.scss
@@ -6,20 +6,19 @@
     width: 100%;
     height: auto;
     display: flex;
-    background-color: #2d2d2d;
+    //background-color: #2d2d2d;
     margin: 8rem 0;
     padding: 6rem 0;
+    //margin-top: 0%;
     text-align: center;
   }
   
   .banner-content {
     color: white;
-    display: flex;
-    justify-content: space-between;
     width: 100%;
     height: 100%;
     align-items: center;
-  
+    
     &__text {
       display: flex;
       flex-direction: column;
