--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
 
 }
 .button{
-  background-color: #2ca8ff;
+  background-color: #38BDF2;
   border-radius: 20px;
   transition: background-color 0.3s;
   color: white;
@@ -24,7 +24,7 @@
 }
 
 .custom-nav-link:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: #38BDF2;
 }
 
 .custom-nav-link img {
