--- a/src/global/Styles/_colors.scss
+++ b/src/global/Styles/_colors.scss
@@ -4,6 +4,6 @@ $bg-white: #ffffff;
 
 // text color
 $text-black: #010103;
-$text-orange: #1987ef;
+$text-orange: #38BDF2;
 $btn-black: #161616;
 $text-gray: #706f7b;
