--- a/src/components/HeroPages/HeroPages.scss
+++ b/src/components/HeroPages/HeroPages.scss
@@ -4,7 +4,7 @@
 .hero-pages {
     width: 100%;
     height: 41rem;
-    background-image: url("../../../public/images/sahil.jpeg");
+    //background-image: url("../../../public/images/sahil.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
