--- a/src/components/Hero/Styles/_hero.scss
+++ b/src/components/Hero/Styles/_hero.scss
@@ -1,4 +1,4 @@
-@use "/src/global/Styles/" as *;
+@use "/src/assets/Styles/" as *;
 
 /* .clear-filter[filter-color="blue"] {
   background: rgba(44, 44, 44, 0.2);
