--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -2,15 +2,15 @@
     padding: 80px;
     opacity: 0.9;
     box-shadow: 0 2px 8px 2px rgba(20,3,28,15);
-  
-  
   }
   
   .btn-neutral {
     transition: transform 0.2s ease-in-out;
     font-size: 16px;
+    justify-content: center;
   }
   
   .btn-neutral:hover {
     transform: scale(1.05); /* Increase the size on hover */
   }
+
