--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -5,12 +5,14 @@
   }
   
   .btn-neutral {
-    transition: transform 0.2s ease-in-out;
-    font-size: 16px;
+    font-size: 14px;
     justify-content: center;
+    border-radius: 20px;
+    transition: background-color 0.3s;
+    
   }
   
   .btn-neutral:hover {
-    transform: scale(1.05); /* Increase the size on hover */
+    transform: scale(1.10); /* Increase the size on hover */
   }
 
