--- a/src/components/VehliceCard/VehliceCard.css
+++ b/src/components/VehliceCard/VehliceCard.css
@@ -8,3 +8,13 @@
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
   }
   
+  .vehlice-card button {
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s, box-shadow 0.3s;
+  }
+  
+  .vehlice-card button:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 10px rgba(6, 7, 7, 0.8);
+  }
