admin sidebar updated

--- a/src/components/admin/AdminLayout.css
+++ b/src/components/admin/AdminLayout.css
@@ -12,7 +12,7 @@
   }
   
   .main-content {
-    background: #ffff;
+    background: #ffffff;
     flex: 1;
     padding:  10px; /* veya istediğiniz bir içerik içi boşluk değeri */
   }
