--- a/src/components/admin/SideBar/Sidebar.css
+++ b/src/components/admin/SideBar/Sidebar.css
@@ -4,6 +4,17 @@
   position: absolute;
   top: 0;
   left: 0;
+  background-color: #31393c;
+}
+
+.nav__item{
+        display: inline-flex;
+        align-items: center;
+        border-radius: 20px; /* Yuvarlak köşeler için */
+        padding: 10px 15px;
+        transition: background-color 0.3s;
+        background-color: #07a7e1;
+      
 }
 
 .sidebarActive {
@@ -12,7 +23,7 @@
   top: 0;
   left: 0;
   z-index: 999;
-  background: #ee4266;
+  background: #0522e0;
   padding: 0px 30px;
 }
 
@@ -34,7 +45,7 @@
   display: flex;
   align-items: center;
   column-gap: 0.5rem;
-  color: var(--heading-color);
+  color: #fff;
 }
 
 .sidebar__top h2 span {
@@ -43,7 +54,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--secondary-color);
+  background: #01d293;
   border-radius: 50%;
 }
 .sidebar__top h2 i {
@@ -66,7 +77,7 @@
 }
 
 .sidebar__bottom {
-  height: 20%;
+  height: 0%;
 }
 
 .nav__link,
@@ -79,7 +90,7 @@
 }
 
 .sidebar__bottom span {
-  color: var(--small-text-color);
+  color: #808191;
   cursor: pointer;
 }
 
@@ -88,11 +99,11 @@
 
   row-gap: 2rem;
   flex-direction: column;
-  color: var(--small-text-color);
+  color: #808191;
 }
 
 .nav__link i {
-  color: var(--secondary-color);
+  color: #ffffff;
 }
 
 .nav__active {
@@ -116,7 +127,7 @@
     left: 0;
     height: 10px;
     width: 100px;
-    background-color: red;
+    background-color: rgb(0, 213, 255);
   }
   .sidebar__content {
     justify-content: flex-start;
@@ -134,7 +145,7 @@
   display: flex;
   align-items: center;
   column-gap: 0.5rem;
-  color: var(--heading-color);
+  color: #fff;
 }
 
 .sidebar__top h2 span {
@@ -143,13 +154,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--secondary-color);
+  background: #01d293;
   border-radius: 50%;
 }
 .sidebar__top h2 i {
   font-weight: 400 !important;
   padding: 5px;
   font-size: 1.2rem;
+
 }
 
 .sidebar__content {
@@ -179,7 +191,7 @@
 }
 
 .sidebar__bottom span {
-  color: var(--small-text-color);
+  color: #808191;
   cursor: pointer;
 }
 
@@ -188,11 +200,11 @@
 
   row-gap: 2rem;
   flex-direction: column;
-  color: var(--small-text-color);
+  color: #808191;
 }
 
 .nav__link i {
-  color: var(--secondary-color);
+  color: #01d293;
 }
 
 .nav__active {
@@ -209,7 +221,7 @@
     top: 0;
     left: 0;
     z-index: 999;
-    background: var(--primary-color);
+    background: #181b3a;
     transform: translateX(-100%);
     padding: 0px 30px;
     transition: all 0.5s;
@@ -221,7 +233,7 @@
     top: 0;
     left: 0;
     z-index: 999;
-    background: var(--primary-color);
+    background: #181b3a;
     transform: translateX(0%);
     padding: 0px 30px;
     transition: all 0.5s;
@@ -235,7 +247,7 @@
     transform: translateX(0%);
     height: 3rem;
     z-index: 1000;
-    background-color: var(--secondary-color);
+    background-color: #01d293;
     color: white;
     display: flex;
     justify-content: center;
@@ -250,7 +262,7 @@
     left: 100%;
     transform: translateX(-100%);
     height: 3rem;
-    background-color: var(--secondary-color);
+    background-color: #01d293;
     color: white;
     display: flex;
     justify-content: center;
@@ -262,4 +274,26 @@
     justify-content: flex-start;
     overflow: auto;
   }
+}
+
+
+.nav__link {
+  color: #ffffff;
+  transition: 0.3s;
+}
+
+.nav__link:hover {
+  color: white;
+  background: #b7ffe913;
+  padding: 6px;
+  border-radius: 5px;
+}
+
+
+.sidebar__bottom{
+    display: flex;
+    align-items: center;
+    padding: 0px 30px;
+    color: #808191;
+    transition: 0.3s;
 }
