--- a/src/pages/Rental/Rental.css
+++ b/src/pages/Rental/Rental.css
@@ -1,6 +1,6 @@
 .car__info{
-    background-color: #fff;
-    width: 100%;
+    background-color: #b4cad5;
+    width: 110%;
     padding: 4rem 4.5rem 5rem 5.5rem;
     box-shadow: 0 10px 20px 0 rgb(0 0 0 / 10%);
     height: auto;
@@ -12,7 +12,21 @@
     flex-direction: column;
     color: #000d6b;
 }
+.booking-info{
+    background-color:#b4cad5;
+    width: 90%;
+    padding: 3rem 3.5rem 3rem 3.5rem;
+    box-shadow: 0 10px 20px 0 rgb(0 0 0 / 10%);
+    height: auto;
+    position: relative;
+    z-index: 4;
+    color: white;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    color: #000d6b;
 
+}
 
 .booking__form {
     width: 40.5%;
