--- a/src/pages/Rental/Rental.css
+++ b/src/pages/Rental/Rental.css
@@ -1,5 +1,5 @@
 .car__info{
-    background-color: #b4cad5;
+    background-color: #e9eaeb;
     width: 110%;
     padding: 4rem 4.5rem 5rem 5.5rem;
     box-shadow: 0 10px 20px 0 rgb(0 0 0 / 10%);
@@ -13,7 +13,7 @@
     color: #000d6b;
 }
 .booking-info{
-    background-color:#b4cad5;
+    background-color:#e9eaeb;
     width: 90%;
     padding: 3rem 3.5rem 3rem 3.5rem;
     box-shadow: 0 10px 20px 0 rgb(0 0 0 / 10%);
@@ -86,6 +86,17 @@
     outline: none;
   }
 
+  .btn-rezerv {
+    font-weight: 700;
+    padding: 1.5rem 2.5rem;
+    border-radius: 0.3rem;
+    box-shadow: 0 10px 15px 0 rgba(0, 221, 246, 0.25);
+    border: 2px solid #38BDF2;
+    width: 100%;
+  }
 
-  
+  .btn-rezerv:hover {
+    color: #069be6;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3), 0 0 20px rgba(0, 0, 0, 0.2);
+  }
   
