--- a/src/components/Hero/Styles/_hero.scss
+++ b/src/components/Hero/Styles/_hero.scss
@@ -1,35 +1,16 @@
 @use "/src/assets/Styles/" as *;
 
-/* .clear-filter[filter-color="blue"] {
-  background: rgba(44, 44, 44, 0.2);
-  background: -webkit-linear-gradient(
-    30deg,
-    rgba(44, 44, 44, 0.2),
-    rgba(3, 161, 224, 0.6)
-  );
-  background: -o-linear-gradient(
-    30deg,
-    rgba(44, 44, 44, 0.2),
-    rgba(3, 161, 224, 0.6)
-  );
-  background: -moz-linear-gradient(
-    30deg,
-    rgba(44, 44, 44, 0.2),
-    rgba(3, 161, 224, 0.6)
-  );
-  background: linear-gradient(
-    0deg,
-    rgba(44, 44, 44, 0.2),
-    rgba(3, 161, 224, 0.6)
-  );
-} */
-
 .hero-section {
   width: 100%;
   height: 97vh;
   //background-color: #373f43;
   //background-image: url("/public/images/car/car4.jpeg");
-  position: relative;
+
+
+
+    
+  
+  
 }
 
 
@@ -59,7 +40,7 @@
   &__text {
     display: flex;
     flex-direction: column;
-    z-index: 3;
+    z-index: 10;
     max-width: 50rem;
     margin-top: 5rem;
 
@@ -90,8 +71,9 @@
     }
 
     p {
-      font-size: $p-size;
+      font-size:large;
       font-family: $text-font;
+      font-weight: 700;
       line-height: 1.6;
       margin-bottom: 4rem;
       color: #050505;
